fixing alignment issues and cleaning up CSS

--- a/public/index.css
+++ b/public/index.css
@@ -11,13 +11,6 @@ code {
     monospace;
 }
 
-#container {
-  display: flex;
-  position: fixed;
-  justify-content: center;
-  align-items: center;
-}
-
 .tooltip {
   position: absolute;
   text-align: left;
